...
    android:layout_height="match_parent"
    tools:context=".activities.ProductActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/category_name_hint"
        android:inputType="textCapSentences"
        android:imeOptions="flagNoExtractUi"
        android:textColor="@android:color/black"
...

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave"
        android:textColor="@android:color/black"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />
...
