...

    <com.RightDirection.ShoppingList.views.CustomRecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/rvUnits"
        android:layout_alignParentLeft="true" />
</RelativeLayout>
