<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item android:id="@+id/imgSendListByEmail"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/send_by_email"
        android:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/imgReceiveListByEmail"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/receive_by_email"
        android:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/imgChangeListName"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:title="@string/change_list_name"
        android:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/imgEdit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/edit"
        android:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/imgDelete"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/delete"
        android:showAsAction="always"
        tools:ignore="AppCompatResource" />

</menu>