...
            android:id="@+id/action_edit_products_list"
            android:orderInCategory="100"
            android:title="@string/action_edit_products_list"
            android:icon="@drawable/ic_products"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_edit_units_list"
            android:orderInCategory="102"
            android:title="@string/action_edit_units_list"
            android:icon="@drawable/ic_units"
            app:showAsAction="never" />
    </group>

...
